--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /RecycleWasteDatasetCropped/paper/*
 /RecycleWasteDatasetCropped/plastic/*
 /RecycleWasteDatasetYolo/data/train/*
+
+!/RecycleWasteDatasetCropped/glass/.gitkeep
+!/RecycleWasteDatasetCropped/metal/.gitkeep
+!/RecycleWasteDatasetCropped/paper/.gitkeep
+!/RecycleWasteDatasetCropped/plastic/.gitkeep
+!/RecycleWasteDatasetYolo/data/train/.gitkeep
